@@ -1,3 +1,7 @@
+2016-05-22 S. Thiell <sthiell@stanford.edu>
+
+	* EngineClient.py: handle broken pipe on write() (ticket #196).
+
 2016-04-24 S. Thiell <sthiell@stanford.edu>
 
 	* NodeSet.py: allow empty string as valid argument for empty NodeSet
